ver 0.20 (not yet released)
* protocol
  - "commands" returns playlist commands only if playlist_directory configured
  - "search"/"find" have a "window" parameter
  - report song duration with milliseconds precision
* tags
  - ape: drop support for non-standard tag "album artist"
* output
  - pulse: set channel map to WAVE-EX

ver 0.19.5 (not yet released)
* decoder
  - dsdiff, dsf, opus: fix deadlock while seeking

ver 0.19.4 (2014/11/18)
* protocol
  - workaround for buggy clients that send "add /"
* decoder
  - ffmpeg: support opus
  - opus: add MIME types audio/ogg and application/ogg
* fix crash on failed filename charset conversion
* fix local socket detection from uid=0 (root)

ver 0.19.3 (2014/11/11)
* protocol
  - fix "(null)" result string to "list" when AlbumArtist is disabled
* database
  - upnp: fix breakage due to malformed URIs
* input
  - curl: another fix for redirected streams
* decoder
  - audiofile: fix crash while playing streams
  - audiofile: fix bit rate calculation
  - ffmpeg: support opus
  - opus: fix bogus duration on streams
  - opus: support chained streams
  - opus: improved error logging
* fix distorted audio with soxr resampler
* fix build failure on Mac OS X with non-Apple compilers

ver 0.19.2 (2014/11/02)
* input
  - curl: fix redirected streams
* playlist
  - don't allow empty playlist name
  - m3u: don't ignore unterminated last line
  - m3u: recognize the file suffix ".m3u8"
* decoder
  - ignore URI query string for plugin detection
  - faad: remove workaround for ancient libfaad2 ABI bug
  - ffmpeg: recognize MIME type audio/aacp
  - mad: fix negative replay gain values
* output
  - fix memory leak after filter initialization error
  - fall back to PCM if given DSD sample rate is not supported
* fix assertion failure on unsupported PCM conversion
* auto-disable plugins that require GLib when --disable-glib is used

ver 0.19.1 (2014/10/19)
* input
  - mms: fix deadlock bug
* playlist
  - extm3u: fix Extended M3U detection