@@ -240,7 +240,8 @@
         bigger than the priority of the current song.  Decreasing the
         priority of a song will moved it farther to the end of the
         sequence.  Changing the priority of the current song has no
-        effect on the sequence.
+        effect on the sequence.  During playback, a song's priority is
+        reset to zero.
       </para>
     </section>
   </chapter>
