@@ -7,6 +7,7 @@ ver 0.20 (not yet released)
   - ape: drop support for non-standard tag "album artist"
 * output
   - pulse: set channel map to WAVE-EX
+* reset song priority on playback
 
 ver 0.19.5 (not yet released)
 * decoder
